--- a/css/style.css
+++ b/css/style.css
@@ -1250,6 +1250,23 @@ overflow-x: hidden;
 	background-color: initial;
 }
 
+.heirloomRare7{/*MOD:lunatic*/
+	color: #ff9326;
+		text-shadow:
+	 -0.15vw -0.15vw 0.2vw #ba0050,  
+	  0.15vw -0.15vw 0.25vw #d3005b,
+	 -0.15vw 0.15vw 0.2vw #ec0066,
+	  0.15vw 0.15vw 0.3vw #6d002f;
+}
+
+.heirloomRare7.heirloomMod:hover, .heirloomRare7.rarityBdBox{/*MOD:lunatic*/
+	border: 0.2vw solid #ff9326;
+}
+
+.heirloomRare7 .heirloomMod{/*MOD:lunatic*/
+	background-color: initial;
+}
+
 #heirRare{
 	background-color: #111;
 	font-size: 1.1vw;
@@ -1280,6 +1297,9 @@ overflow-x: hidden;
 	background-color: black;
 }
 
+#heirloomRarityMisc .heirloomRare7{/*MOD:lunatic*/
+	background-color: black;
+}
 
 #modBreakdown{
 	margin-top: 0.65vw;
@@ -1293,7 +1313,7 @@ overflow-x: hidden;
 	line-height: 2vw;
 }
 
-#ShieldEquipped, #StaffEquipped{
+#ShieldEquipped, #JuwelEquipped, #StaffEquipped, #DaggerEquipped {/*MOD:lunatic*/
 	background-color: #333;
 	display: inline-block;
 	padding: 1vw;
@@ -1307,7 +1327,7 @@ overflow-x: hidden;
     box-shadow:inset 0px 0px 0px 0.2vw #646473;
 }
 
-#ShieldEquippedName, #StaffEquippedName{
+#ShieldEquipped, #JuwelEquipped, #StaffEquipped, #DaggerEquipped {/*MOD:lunatic*/
 	font-size: 1.4vw;
 	line-height: 1.4vw;
 }
@@ -1416,6 +1436,12 @@ overflow-x: hidden;
 background: -moz-linear-gradient(-45deg,  #000b38 0%, #280021 50%, #000b38 100%); 
 background: -webkit-linear-gradient(-45deg,  #000b38 0%,#280021 50%,#000b38 100%); 
 background: linear-gradient(135deg,  #000b38 0%,#280021 50%,#000b38 100%); 
+}
+
+.selectedHeirloomItem.heirloomRare7{/*MOD:lunatic*/
+background: -moz-linear-gradient(-45deg,  #380b00 0%, #210028 50%, #380b00 100%); 
+background: -webkit-linear-gradient(-45deg,  #380b00 0%,#210028 50%,#380b00 100%); 
+background: linear-gradient(135deg,  #380b00 0%,#210028 50%,#380b00 100%); 
 }
 
 
